livestore/expo-adapter issue

--- a/app.json
+++ b/app.json
@@ -24,7 +24,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.padova12.travellingbuddies"
     },
     "web": {
       "bundler": "metro",
