feat: livestore configuration

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-EXPO_PUBLIC_STORE_ID=your-store-id
-EXPO_PUBLIC_SYNC_URL=your-sync-url
+EXPO_PUBLIC_STORE_ID=travel-buddies-store
+EXPO_PUBLIC_SYNC_URL=ws://localhost:8787
